--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,9 +5,6 @@
     android:layout_height="match_parent"
     android:background="@drawable/bgimage">
 
-
-
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -22,18 +19,14 @@
         android:textColor="#54abee"
         android:gravity="center"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="45dp"
-        />
+        android:layout_marginBottom="45dp" />
 
         <TextView
             android:background="@drawable/ozzonlogo"
             android:id="@+id/ozzon"
             android:layout_width="132dp"
             android:layout_height="30dp"
-            android:layout_centerInParent="true"
-            />
-
-
+            android:layout_centerInParent="true" />
 
         <customfonts.MyTextView
             android:id="@+id/acc"
@@ -44,8 +37,7 @@
             android:textColor="#c4c5c9"
             android:gravity="center"
             android:layout_above="@id/signin"
-            android:paddingBottom="16dp"
-            />
+            android:paddingBottom="16dp" />
 
         <LinearLayout
             android:id="@+id/get"
@@ -55,9 +47,7 @@
             android:background="@drawable/roundedrect"
             android:padding="16dp"
             android:orientation="horizontal"
-            android:layout_marginTop="140dp"
-
-            >
+            android:layout_marginTop="140dp">
 
             <FrameLayout
                 android:layout_width="wrap_content"
@@ -65,22 +55,17 @@
                 android:layout_gravity="center"
                 android:layout_marginLeft="1dp">
 
-
                 <ImageView
                     android:layout_width="60dp"
                     android:layout_height="60dp"
-                    android:src="@drawable/rect1"
-                    />
-
+                    android:src="@drawable/rect1" />
 
                 <ImageView
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:src="@drawable/bag"
+                    android:src="@drawable/logo2"
                     android:paddingLeft="3dp"
-                    android:layout_gravity="center"
-                     />
-
+                    android:layout_gravity="center" />
 
             </FrameLayout>
 
@@ -95,12 +80,5 @@
                 android:layout_marginLeft="16dp"/>
 
         </LinearLayout>
-
-
-
-
      </RelativeLayout>
-
-
-
 </FrameLayout>
