--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,12 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+
+    <color name="White">#fff</color>
+
+    <color name="lightgrey">#d1d1d1</color>
+    <color name="pink">#EA2164 </color>
+    <color name="text">#545454</color>
+
 </resources>
